# portal

./: .eslintrc  .gitignore  .prettierrc  Dockerfile_dev  Dockerfile_prod  LICENSE  README.md  astro.config.mjs  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  elite-mod-api-spec.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json
.husky/: pre-commit
frontend/: .dockerignore  Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
server/: Cargo.toml  Dockerfile  server.mjs  winston.mjs
server/database/: Cargo.toml
server/database/src/: error.rs  lib.rs
server/database/src/models/: action.rs  game_details.rs  hero.rs  league.rs  map.rs  message.rs  mod.rs  player.rs  player_details.rs  player_game.rs  race.rs  recent_games.rs  replay_report.rs
server/database/src/models/games/: game.rs  mod.rs  types.rs
server/database/src/repository/: game_repository.rs  mod.rs  player_repository.rs
server/database/src/types/: mod.rs  pageable.rs  pagination.rs
server/migrations/: 20230328203725_seed.down.sql  20230328203725_seed.up.sql  20230427095120_messages.down.sql  20230427095120_messages.up.sql  20230429201629_ratings.down.sql  20230429201629_ratings.up.sql  20230508083225_socials.down.sql  20230508083225_socials.up.sql
server/ratings/: Cargo.toml
server/ratings/src/: calculate_ratings.rs  main.rs
server/src/: error.rs  main.rs  middlew.rs
server/src/controllers/: game.rs  mod.rs  player.rs  reporter.rs
server/tests/: quick_dev.rs
src/utils/: api.ts  (+4 more)
(+68 files in other folders)
