[package]
name = "rust-dawnofwar"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "database",
  "ratings",
]

[dependencies]
database = { path = "database" }
axum = { version = "0.6.18", features = ["query"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.158", features = ["serde_derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "tokio", "validate-request"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"
httpc-test = "0.1.2"
